[package]
name = "tuners"
version = "0.2.0"
authors = ["Pedro Alves <pta2002@pta2002.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aubio-rs = "0.1.3"
jack = "0.6.2"
crossbeam-channel = "0.4"
ctrlc = "3.1.4"
libpulse-simple-binding = "2.16.0"
sdl2 = "0.34.0"
